--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="description" content="React SSR CoP">
     <meta charset="utf-8" />
-    <title>Webpack App</title>
+    <title>SSR in React 😸 - Testing CSR</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
