chore: adding google verif

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>SSR in React 😸 - Testing CSR</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="google-site-verification" content="zP61LPT8YnwLvr7RrD3NoVoY4wtNgFwgerI3ni-uvsg">
   </head>
   <body>
     <div id="app"></div>
